2012-09-21  Karl Berry  <karl@tug.org>

	* many files: remove useless $Header$ from old repo,
	do not point to dvipdfmx@ email address any more.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ChangeLog.PATCHES, ChangeLog.TL (removed): Now merged ...
	* ChangeLog: ... into this.

2012-08-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce TL/W32TeX diffs.
	* cidtype0.c, cidtype2.c, cmap_write.c, mpost.c, truetype.c,
	tt_cmap.c, tt_gsub.c, tt_post.c: Cast function args to avoid
	WIN32 (MSVC) warnings.
	* pdfobj.c (pdf_out_xchar): Reformulate to avoid MSVC warnings.
	* xbb.c (show_usage): Correctly report .bb or .xbb as default.
	Always use binary mode for output file.

2012-08-26  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/tt_table.c (tt_read_hhea_table),
	src/tt_post.c (read_v2_post_names),
	src/cc_tmap.c (otf_load_Unicode_CMap): typos.

2012-08-23  Khaled Hosny  <khaledhosny@eglug.org>

	* src/Makefile.am: Remove mention of non-existent files.

2012-08-21  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/tt_post.c (read_v2_post_names): support large truetype fonts
	which are strictly speaking out of spec, idx > 32767.
	* src/dvipdfmx.c: support monocase file system.

2012-08-21  keiichirou shikano <k16.shikano@gmail.com>

	* src/cff.c, src/cff.h. src/type1.c: fix type1 SEAC bug.

2012-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dpxfile.c: Drop tests for __TDS_VERSION__.
	* configure.ac: Drop definition of __TDS_VERSION__.

2012-08-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Flatten, i.e., remove dvipdfmx-20120420/.
	* Makefile.am (-EXTRA_DIST): Drop  $(DVIPDFMX_TREE){,-PATCHES}.
	* configure.ac: Drop DVIPDFMX_TREE.
	* version.ac (removed): Obsolete.

2012-08-20  Khaled Hosny  <khaledhosny@eglug.org>

	* src/dvipdfmx.c, src/mem.c, src/mem.h, src/xbb.c, src/dvipdfmx.c,
	src/mem.c, src/mem.h, src/xbb.c: Remove memory debugging code.

2012-08-18  Khaled Hosny  <khaledhosny@eglug.org>

	Move contents of dvipdfmx-20120420 to the top directory