@@ -6,8 +6,7 @@ dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
 dnl   with or without modifications, as long as this notice is preserved.
 dnl
-m4_include([version.ac])[] dnl define dvipdfmx_version
-AC_INIT([dvipdfmx], dvipdfmx_version, [tex-k@tug.org])
+AC_INIT([dvipdfmx], [20120420], [tex-k@tug.org])
 AC_PREREQ([2.65])
 AC_CONFIG_SRCDIR([src/dvipdfmx.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
